<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="15sp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:gravity="center"
        android:text="@string/inscription"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nom_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prenom_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numtele_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_telephone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/motpass_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/mot_de_passe" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_inscrit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscrit" />

    <TextView
        android:id="@+id/text_connecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="Connecter maintenent"
        android:textColor="#4CAF50"
        android:textSize="20sp" />


</LinearLayout>