<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="15sp"
    tools:context=".LoginActivity">


    <TextView
        android:text="Bienvenue a MyContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="5sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/motpass"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_se_connecter"
        android:text="@string/se_connecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_inscri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inscription ici"
        android:gravity="center"
        android:textColor="#4CAF50"
        android:layout_marginTop="10sp"
        android:textSize="20sp"/>

    <ProgressBar
        android:id="@+id/progress_cercle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:visibility="invisible" />

</LinearLayout>