<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="15sp"
    tools:context=".AjouterContactActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:gravity="center"
        android:text="Ajouter neauveu contact"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nom_added_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nom" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prenom_added_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prenom" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_added_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numtele_added_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/numero_telephone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/service_added_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Service de contact" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ajouter" />


    <ProgressBar
        android:id="@+id/progress_cercle_ajoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:visibility="invisible" />



</LinearLayout>